# game

./: .gitignore  CMakeLists.txt  README.md  Readme.md
client/: CMakeLists.txt
client/include/: animation.h  camera.h  path.h  player.h  timer.h  util.h  vector2.h
client/source/: client.cpp
server/: CMakeLists.txt
server/source/: server.cpp
